--- a/ClientApp/src/app/formula-lookup/formula-lookup.component.html
+++ b/ClientApp/src/app/formula-lookup/formula-lookup.component.html
@@ -427,7 +427,9 @@
                       <dxo-column-chooser [enabled]="true"></dxo-column-chooser>
                       <dxo-column-fixing [enabled]="true"></dxo-column-fixing>
                       <dxi-column dataField="Phase" [width]="100"></dxi-column>
-                      <dxi-column dataField="Task"></dxi-column>
+                      <dxi-column dataField="Task">
+
+                      </dxi-column>
                       <dxi-column dataField="SOPNo" [width]="230"></dxi-column>
                       <dxi-column dataField="Action" [width]="230"></dxi-column>
                       <dxi-column dataField="Duration" [width]="100"></dxi-column>
